Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26103

CMake Project Deploy for Boot2Qt devices only deploys debug build

XMLWordPrintable

    • e54cbc69d82f387ee777de04843635d85693eaa8 (qt-creator/qt-creator/5.0)

      When deploying a CMake project to a Boot2Qt device, Qt Creator appears to only reference the Debug directory for deploy despite user selection of a Release build for deploy. In the best case this causes an error and failure to deploy, but in the worst case can result in unexpected SW being deployed to the board with unexpected behavior.

      My steps to reproduce are the following:

      • Create a new CMake based project
      • Immediately select "Release" Configuration
      • Hit "Ctrl-R" to initiate a build->deploy->run
        Following compile output is then displayed:

        For Gerrit Dashboard: QTCREATORBUG-26103
        # Subject Branch Project Status CR V

            con Eike Ziller
            jace-akerlund-tfs Jace Akerlund
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes