RemoteLinux: Fix updating of command line for temporary local install

E.g. in case of CMake projects the command contains the build directory,
so it needs to update whenever the build directory (or build configuration)
changes.

Fixes: QTCREATORBUG-26103
Change-Id: I02ea3bd47f4a502adc485dfffbed6a14ebefb0bb
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>